# 2Draw

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/: mcp.json
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: color_match.py  image.py  manual.py  pdf.py  search.py
backend/app/api/: checkout.py  process.py  results.py  upload.py  webhook.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/pipeline/: graph.py  state.py
backend/app/utils/: color.py
backend/scripts/: scrape_paints.py  seed_paints.py
backend/seeds/: brands.json  liquitex.json  nevskaya.json  winsor_newton.json
backend/tests/: test_checkout.py  test_color_match_agent.py  test_db.py  test_health.py  test_image_agent.py  test_manual_agent.py  test_pdf_agent.py  test_process.py  test_results.py  test_search_agent.py  test_seed.py  test_upload.py
docs/: architecture.md  claude_desktop_config.example.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: health.test.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/preview/[jobId]/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: pipeline-progress.tsx  preview-card.tsx  settings-form.tsx  spinner.tsx  upload-dropzone.tsx
frontend/lib/: api.ts
frontend/lib/supabase/: server.ts
supabase/migrations/: 0001_initial_schema.sql  0002_domain_schema.sql  0003_exports_job_id.sql
(+1 files in other folders)
