[project]
name = "2draw-backend"
version = "0.1.0"
description = "2Draw FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.8.0",
    "supabase>=2.15.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "scikit-learn>=1.4.0",
    "Pillow>=10.3.0",
    "anthropic>=0.40.0",
    "reportlab>=4.2.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.9",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "anyio>=4.9.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "firecrawl-py>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
